Incremented version and resolved null key expression with default #ip